--- a/PharmacyLocator/Properties/launchSettings.json
+++ b/PharmacyLocator/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "PharmacyLocator": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "PharmacyLocator",
       "applicationUrl": "https://localhost:7298;http://localhost:5146",
       "environmentVariables": {
@@ -21,7 +21,7 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "PharmacyLocator",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
