--- a/PharmacyLocator.Presentation/PharmacyLocator.Presentation.csproj
+++ b/PharmacyLocator.Presentation/PharmacyLocator.Presentation.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.10" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Contracts\Contracts.csproj" />
     <ProjectReference Include="..\Service.Contracts\Service.Contracts.csproj" />
   </ItemGroup>
 </Project>
