--- a/PharmacyLocator/PharmacyLocator.csproj
+++ b/PharmacyLocator/PharmacyLocator.csproj
@@ -17,4 +17,7 @@
     <ProjectReference Include="..\Repository\Repository.csproj" />
     <ProjectReference Include="..\Service\Service.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
 </Project>
