--- a/PharmacyLocatorPractice/PharmacyLocator.Presentation/PharmacyLocator.Presentation.csproj
+++ b/PharmacyLocatorPractice/PharmacyLocator.Presentation/PharmacyLocator.Presentation.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.10" />
   </ItemGroup>
   <ItemGroup>
