--- a/PharmacyLocatorPractice/Shared/Shared.csproj
+++ b/PharmacyLocatorPractice/Shared/Shared.csproj
@@ -4,4 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+  </ItemGroup>
 </Project>
