--- a/PharmacyLocatorPractice/PharmacyLocator/PharmacyLocator.csproj
+++ b/PharmacyLocatorPractice/PharmacyLocator/PharmacyLocator.csproj
@@ -21,5 +21,6 @@
   <ItemGroup>
     <Folder Include="Images\" />
     <Folder Include="Images\" />
+    <Folder Include="Images\" />
   </ItemGroup>
 </Project>
