--- a/Front/package.json
+++ b/Front/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
+    "i18next-browser-languagedetector": "^8.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.15"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17"
   }
 }
