--- a/Front/package.json
+++ b/Front/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "i18next-browser-languagedetector": "^8.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
