--- a/Front/pill-spot/package.json
+++ b/Front/pill-spot/package.json
@@ -22,7 +22,8 @@
     "react-i18next": "^15.4.0",
     "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.15",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
