--- a/Front/pill-spot/package.json
+++ b/Front/pill-spot/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@tailwindcss/vite": "^4.0.6",
+    "@tailwindcss/vite": "^4.0.7",
     "antd": "^5.24.0",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
@@ -20,9 +20,10 @@
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "styled-components": "^6.1.15",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.0.7",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "daisyui": "^5.0.0-beta.8",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
