--- a/Front/pill-spot/package.json
+++ b/Front/pill-spot/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.7",
     "antd": "^5.24.0",
+    "axios": "^1.7.9",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
     "i18next-xhr-backend": "^3.2.2",
@@ -21,7 +23,10 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.3",
+    "sonner": "^2.0.1",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.7",
     "uuid": "^11.0.5"
