--- a/Front/pill-spot/package.json
+++ b/Front/pill-spot/package.json
@@ -21,6 +21,7 @@
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
