--- a/Front/pill-spot/package.json
+++ b/Front/pill-spot/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.7",
     "antd": "^5.24.0",
     "axios": "^1.7.9",
+    "cally": "^0.8.0",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
     "i18next-xhr-backend": "^3.2.2",
@@ -23,6 +24,8 @@
     "maplibre-gl": "^5.1.1",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
+    "react-calendar": "^5.1.0",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-i18next": "^15.4.0",
