--- a/Front/pill-spot/package.json
+++ b/Front/pill-spot/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^6.4.7",
     "@mui/x-charts": "^7.27.1",
     "@react-google-maps/api": "^2.20.6",
+    "@react-three/drei": "^8.20.2",
+    "@react-three/fiber": "^8.18.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.7",
     "antd": "^5.24.0",
@@ -30,6 +32,7 @@
     "react-calendar": "^5.1.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-feather": "^2.0.10",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.5.0",
@@ -37,10 +40,14 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
+    "react-tsparticles": "^2.12.2",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.7",
-    "uuid": "^11.0.5"
+    "three": "^0.174.0",
+    "tsparticles": "^3.8.1",
+    "uuid": "^11.0.5",
+    "vanta": "^0.5.24"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -48,6 +55,7 @@
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/three": "^0.174.0",
     "@vitejs/plugin-react": "^4.3.4",
     "daisyui": "^5.0.0-beta.8",
     "eslint": "^9.17.0",
