--- a/Back/Pill-Spot/PillSpot/appsettings.json
+++ b/Back/Pill-Spot/PillSpot/appsettings.json
@@ -29,8 +29,8 @@
     "expires": 30
   },
   "ConnectionStrings": {
-    //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=root;"
-   "MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=1012003KhaleD;"
+    "MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=root;"
+   //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=1012003KhaleD;"
   },
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
