--- a/Front/pill-spot/package.json
+++ b/Front/pill-spot/package.json
@@ -25,6 +25,7 @@
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
     "i18next-xhr-backend": "^3.2.2",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^5.1.1",
     "react": "^18.3.1",
@@ -43,6 +44,7 @@
     "react-tsparticles": "^2.12.2",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.15",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.7",
     "three": "^0.174.0",
     "tsparticles": "^3.8.1",
@@ -51,6 +53,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/jwt-decode": "^3.1.0",
     "@types/leaflet": "^1.9.16",
     "@types/node": "^22.13.5",
     "@types/react": "^18.3.18",
