Fix Authorization in UserController

--- a/Back/Pill-Spot/PillSpot/appsettings.json
+++ b/Back/Pill-Spot/PillSpot/appsettings.json
@@ -29,7 +29,8 @@
     "expires": 30
   },
   "ConnectionStrings": {
-    "MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=root;"
+    //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=root;",
+    "MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=rootroot;"
   },
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
