--- a/Front/pill-spot/package.json
+++ b/Front/pill-spot/package.json
@@ -27,6 +27,7 @@
     "i18next-xhr-backend": "^3.2.2",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.507.0",
     "maplibre-gl": "^5.1.1",
     "react": "^18.3.1",
     "react-awesome-reveal": "^4.3.1",
