--- a/Back/Pill-Spot/PillSpot/appsettings.json
+++ b/Back/Pill-Spot/PillSpot/appsettings.json
@@ -37,8 +37,7 @@
     "expires": 30
   },
   "ConnectionStrings": {
-    "MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=root;",
-    //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=rootroot;"
+    "MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=root;"
   },
   "EmailSettings": {
     "From": "noreply@pillspot.com",
