--- a/Back/Pill-Spot/PillSpot/appsettings.json
+++ b/Back/Pill-Spot/PillSpot/appsettings.json
@@ -38,7 +38,8 @@
   },
   "ConnectionStrings": {
     //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=root;",
-    "MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=rootroot;"
+    //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=rootroot;"
+    "MySqlConnection": "Server=db22520.public.databaseasp.net;Database=db22520;Uid=db22520;Pwd=2Rz#Lp?3y%5H;"
   },
   "EmailSettings": {
     "From": "noreply@pillspot.com",
