--- a/Back/Pill-Spot/PillSpot/appsettings.json
+++ b/Back/Pill-Spot/PillSpot/appsettings.json
@@ -37,7 +37,7 @@
     "expires": 30
   },
   "ConnectionStrings": {
-    "MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=root;",
+    "MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=1234;",
     //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=rootroot;"
   },
   "EmailSettings": {
