--- a/Front/pill-spot/package.json
+++ b/Front/pill-spot/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@microsoft/signalr": "^8.0.7",
     "@headlessui/react": "^2.2.4",
-
+    "@microsoft/signalr": "^8.0.7",
     "@mui/material": "^6.4.7",
     "@mui/x-charts": "^7.27.1",
     "@react-google-maps/api": "^2.20.6",
@@ -25,6 +24,7 @@
     "antd": "^5.24.0",
     "axios": "^1.7.9",
     "cally": "^0.8.0",
+    "framer-motion": "^12.19.2",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.3",
     "i18next-xhr-backend": "^3.2.2",
