--- a/Front/pill-spot/package.json
+++ b/Front/pill-spot/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-feather": "^2.0.10",
+    "react-hook-form": "^7.59.0",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
