fix some of permission of userController

--- a/Back/Pill-Spot/PillSpot/appsettings.json
+++ b/Back/Pill-Spot/PillSpot/appsettings.json
@@ -32,7 +32,7 @@
   },
   "JwtSettings": {
     "ValidIssuer": "PillSpotAPI",
-    "ValidAudience": "https://localhost:7298",
+    "ValidAudience": "http://pillspot.runasp.net",
     "SecretKey": "PillSpotSecretKey132313@3eeqff",
     "expires": 30
   },
@@ -70,7 +70,7 @@
     ]
   },
   "CookieSettings": {
-    "Domain": "localhost",
+    "Domain": "pillspot.runasp.net",
     "ExpirationMinutes": 60
   },
   "AllowedHosts": "*"
