GO TO MONAKASHA

--- a/Back/Pill-Spot/PillSpot/appsettings.Development.json
+++ b/Back/Pill-Spot/PillSpot/appsettings.Development.json
@@ -1,8 +1,84 @@
 {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Filter": [
+      {
+        "Name": "ByExcluding",
+        "Args": {
+          "expression": "StartsWith(SourceContext, 'Microsoft') or StartsWith(SourceContext, 'System')"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": { "Application": "PillSpot" }
+  },
+  "JwtSettings": {
+    "ValidIssuer": "PillSpotAPI",
+    "ValidAudience": "https://pillspot.runasp.net",
+    "SecretKey": "PillSpotSecretKey132313@3eeqff",
+    "expires": 30
+  },
+  "ConnectionStrings": {
+    //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=1234;",
+    //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=rootroot;"
+    "MySqlConnection": "Server=db22675.public.databaseasp.net;Database=db22675;Uid=db22675;Pwd=4o=Em!Q2%C8x;SslMode=Preferred; "
+  },
+  "EmailSettings": {
+    "From": "noreply@pillspot.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "your_email@gmail.com",
+    "Password": "your_app_password"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "RateLimiting": {
+    "GeneralLimit": 100,
+    "AuthenticationLimit": 5,
+    "SearchLimit": 20,
+    "UploadLimit": 10,
+    "WindowMinutes": 1
+  },
+  "CorsSettings": {
+    "AllowedOrigins": [
+      "http://pillspot.runasp.net",
+      "http://localhost:5173",
+      "https://localhost:5173",
+      "https://localhost:7298",
+      "http://localhost:7298",
+      "https://pill-spot-admin-side-nsnj.vercel.app",
+      "http://pill-spot-admin-side-nsnj.vercel.app",
+      "https://pill-spot-user-side-5f4f.vercel.app",
+      "http://pill-spot-user-side-5f4f.vercel.app",
+      "https://pill-spot-user-side-git-main-hobbys-projects-4dba58b8.vercel.app",
+      "http://pill-spot-user-side-git-main-hobbys-projects-4dba58b8.vercel.app"
+    ]
+  },
+  "CookieSettings": {
+    "Domain": "pillspot.runasp.net",
+    "ExpirationMinutes": 60
+  },
+  "AllowedHosts": "*"
 }
