--- a/Back/Pill-Spot/PillSpot/PillSpot.csproj
+++ b/Back/Pill-Spot/PillSpot/PillSpot.csproj
@@ -34,6 +34,7 @@
     <PackageReference Include="System.Threading.RateLimiting" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Entities\Entities.csproj" />
     <ProjectReference Include="..\PillSpot.Presentation\PillSpot.Presentation.csproj" />
     <ProjectReference Include="..\Repository\Repository.csproj" />
     <ProjectReference Include="..\Service\Service.csproj" />
