--- a/Back/Pill-Spot/PillSpot/appsettings.json
+++ b/Back/Pill-Spot/PillSpot/appsettings.json
@@ -37,9 +37,9 @@
     "expires": 30
   },
   "ConnectionStrings": {
-    "MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=1234;",
+    //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=1234;",
     //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=rootroot;"
-    //"MySqlConnection": "Server=db22675.public.databaseasp.net;Database=db22675;Uid=db22675;Pwd=4o=Em!Q2%C8x;SslMode=Preferred; "
+    "MySqlConnection": "Server=db22675.public.databaseasp.net;Database=db22675;Uid=db22675;Pwd=4o=Em!Q2%C8x;SslMode=Preferred; "
   },
   "EmailSettings": {
     "From": "noreply@pillspot.com",
@@ -68,8 +68,8 @@
       "https://localhost:5173",
       "https://localhost:7298",
       "http://localhost:7298",
-      "https://pill-spot-admin-side-5f4f.vercel.app",
-      "http://pill-spot-admin-side-5f4f.vercel.app",
+      "https://pill-spot-admin-side-nsnj.vercel.app",
+      "http://pill-spot-admin-side-nsnj.vercel.app",
       "https://pill-spot-user-side-5f4f.vercel.app",
       "http://pill-spot-user-side-5f4f.vercel.app"
     ]
