--- a/Back/Pill-Spot/PillSpot/appsettings.json
+++ b/Back/Pill-Spot/PillSpot/appsettings.json
@@ -37,9 +37,9 @@
     "expires": 30
   },
   "ConnectionStrings": {
-    "MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=1234;",
+    //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=1234;",
     //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=rootroot;"
-    //"MySqlConnection": "Server=db22675.public.databaseasp.net;Database=db22675;Uid=db22675;Pwd=4o=Em!Q2%C8x;SslMode=Preferred; "
+    "MySqlConnection": "Server=db22880.databaseasp.net; Database=db22880; Uid=db22880; Pwd=6t+DS8w=?hH4;"
   },
   "EmailSettings": {
     "From": "noreply@pillspot.com",
