--- a/Back/Pill-Spot/PillSpot/appsettings.json
+++ b/Back/Pill-Spot/PillSpot/appsettings.json
@@ -32,14 +32,14 @@
   },
   "JwtSettings": {
     "ValidIssuer": "PillSpotAPI",
-    "ValidAudience": "http://pillspot.runasp.net",
+    "ValidAudience": "https://pillspot.runasp.net",
     "SecretKey": "PillSpotSecretKey132313@3eeqff",
     "expires": 30
   },
   "ConnectionStrings": {
     //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=1234;",
     //"MySqlConnection": "Server=LocalHost;Port=3306;Database=PillSpot;User=root;Password=rootroot;"
-    "MySqlConnection": "Server=db22880.databaseasp.net; Database=db22880; Uid=db22880; Pwd=6t+DS8w=?hH4;"
+    "MySqlConnection": "Server=db22880.public.databaseasp.net; Database=db22880; Uid=db22880; Pwd=6t+DS8w=?hH4; SslMode=Preferred;"
   },
   "EmailSettings": {
     "From": "noreply@pillspot.com",
